--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,11 @@ cmake_minimum_required(VERSION 2.84)
 set(CMAKE_CXX_STANDARD 11)
 
 project(tutor)
+set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 
 include_directories(include)
+
+add_definitions(-DPROJECT_SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
 
 add_library(libTutor SHARED
     src/tutor.cpp
@@ -19,7 +22,7 @@ target_include_directories(${PROJECT_NAME} INTERFACE
 
 
 add_executable(main
-    src/main.cpp
+    src/main.cpp 
 )
 
 add_executable(simulatore src/simulatore.cpp)
