Refactoring: delega gestione varchi/svincoli a Highway
Spostata la lettura e validazione dei dati di varchi e svincoli dalla funzione main alla nuova classe Highway, eliminando la struct Nodo e utilizzando la struct Station. Aggiornati i riferimenti e i calcoli relativi alle posizioni. Migliorata la modularità e la leggibilità del codice. Aggiornato CMakeLists.txt per aggiungere il target simulatore e le relative dipendenze.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,10 @@ target_link_libraries(main
     ${PROJECT_NAME}
     libTutor
 )
-
+target_link_libraries(simulatore
+    ${PROJECT_NAME}
+    libTutor
+)
 install(TARGETS ${PROJECT_NAME} libTutor
     LIBRARY DESTINATION lib
     INCLUDES DESTINATION include
